# audio-visualizer-cpp

./: .gitignore  CMakeLists.txt  README.md  config.ini
.github/: copilot-instructions.md
assets/shaders/: dual_echo_feedback.glsl  pixel.glsl  rainbow.glsl  vertex.glsl
include/: pch.hpp
include/core/: allegro_init.hpp  app_state.hpp  discord_integration.hpp  event_handler.hpp  inputstate.hpp  main_loop.hpp  music_engine.hpp
include/database/: database.hpp  init.hpp  library_scanner.hpp
include/graphics/: alignment.hpp  clipping.hpp  draw_shapes.hpp  drawable.hpp  event_handler.hpp  state_color.hpp  uv.hpp
include/graphics/drawables/: button.hpp  container.hpp  frame.hpp  image.hpp  image_button.hpp  progress_bar.hpp  scrollable_frame.hpp  slider.hpp  text.hpp
include/graphics/models/: image.hpp  progress_bar.hpp  slider.hpp
include/graphics/views/: album_list.hpp  audio_vis.hpp  now_playing.hpp  play_queue.hpp  sidebar.hpp
include/mp3/: mp3_streaming.hpp  mp3_support.hpp
include/music/: album.hpp  artist.hpp  genre.hpp  library.hpp  library_views.hpp  play_queue.hpp  playlist.hpp  song.hpp
include/util/: config.hpp  duration.hpp  font.hpp
include/vis/: shader.hpp  visualizations.hpp
packaging/linux/: audiovis.desktop.in
scripts/: build-appimage.sh
src/: main.cpp
src/core/: allegro_init.cpp  app_state.cpp  discord_integration.cpp  main_loop.cpp  music_engine.cpp
src/database/: database.cpp  library_scanner.cpp
src/graphics/: event_handler.cpp
src/graphics/drawables/: button.cpp  container.cpp  frame.cpp  image.cpp  image_button.cpp  progress_bar.cpp  scrollable_frame.cpp  slider.cpp  text.cpp
src/graphics/models/: image.cpp
src/graphics/views/: album_list.cpp  audio_vis.cpp  now_playing.cpp  play_queue.cpp  sidebar.cpp
src/mp3/: mp3_support.cpp
src/music/: album.cpp  library.cpp  library_views.cpp
src/util/: config.cpp
src/vis/: shader.cpp  visualizations.cpp
